# terminal-fluid-sim

./: Cargo.toml  README.md  log4rs.yaml
benches/: bench_main.rs  sim_bench.rs
benches/benchmarks/: mod.rs  sim_bench.rs
src/: UI.rs  app.rs  fps.rs  handler.rs  integration_tests.rs  lib.rs  main.rs  tui.rs  vector.rs
src/app/: app.rs  app_info.rs  config.rs  info.rs  mod.rs
src/fluid_sim/: mod.rs  render.rs  renderer.rs  simulator.rs
src/simulator/: config.rs  mod.rs  simulator.rs
src/ui/: editor.rs  layout.rs  mod.rs  sim_renderer.rs  simulation.rs  theme.rs
