[package]
name = "terminal_fluid_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0"
palette = "0.7.5"
ratatui = "0.26.1"
rayon = "1.10.0"

[dev-dependencies]
approx = "0.5.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
